	* changes in public API to work with std::shared_ptr<torrent_info>
	* extensions API changed to use span and std::shared_ptr
	* plugin API changed to handle DHT requests using string_view
	* removed support for lt_trackers and metadata_transfer extensions
	  (pre-dating ut_metadata)
	* support windows' CryptoAPI for SHA-1
	* separated ssl and crypto options in build
	* remove lazy-bitfield feature
	* simplified suggest-read-cache feature to not depend on disk threads
	* removed option to disable contiguous receive buffers
	* deprecated public to_hex() and from_hex() functions
	* separated address and port fields in listen alerts
	* added support for parsing new x.pe parameter from BEP 9
	* peer_blocked_alert now derives from peer_alert
	* transitioned exception types to system_error
	* made alerts move-only
	* move files one-by-one when moving storage for a torrent
	* removed RSS support
	* removed feature to resolve country for peers
	* added support for BEP 32, "IPv6 extension for DHT"
	* overhauled listen socket and UDP socket handling, improving multi-home
	  support and bind-to-device
	* added new read_resume_data() function, initializing add_torrent_params
	* removed deprecated fields from add_torrent_params
	* deprecate "resume_data" field in add_torrent_params
	* improved support for bind-to-device
	* deprecated ssl_listen, SSL sockets are specified in listen_interfaces now
	* improved support for listening on multiple sockets and interfaces
	* resume data no longer has timestamps of files
	* require C++11 to build libtorrent

1.1.1 release

	* fix piece picker bug that could result in division by zero
	* fix value of current_tracker when all tracker failed
	* deprecate lt_trackers extension
	* remove load_asnum_db and load_country_db from python bindings
	* fix crash in session::get_ip_filter when not having set one
	* fix filename escaping when repairing torrents with broken web seeds