@@ -616,9 +616,9 @@ namespace libtorrent
 		bool failed = false;
 		for (int i = 1; i <= num_blocks; ++i)
 		{
-			if (i < num_blocks && flushing[i] == flushing[i-1]+1) continue;
-			int ret = pe->storage->get_storage_impl()->writev(iov_start
-				, i - flushing_start
+			if (i < num_blocks && flushing[i] == flushing[i - 1] + 1) continue;
+			int ret = pe->storage->get_storage_impl()->writev(
+				{iov_start, size_t(i - flushing_start)}
 				, piece + flushing[flushing_start] / blocks_in_piece
 				, (flushing[flushing_start] % blocks_in_piece) * block_size
 				, file_flags, error);
@@ -1160,7 +1160,7 @@ namespace libtorrent
 			, m_settings.get_bool(settings_pack::coalesce_reads));
 		file::iovec_t b = { j->buffer.disk_block, size_t(j->d.io.buffer_size) };
 
-		int ret = j->storage->get_storage_impl()->readv(&b, 1
+		int ret = j->storage->get_storage_impl()->readv(b
 			, j->piece, j->d.io.offset, file_flags, j->error);
 
 		TORRENT_ASSERT(ret >= 0 || j->error.ec);
@@ -1235,7 +1235,7 @@ namespace libtorrent
 			, m_settings.get_bool(settings_pack::coalesce_reads));
 		time_point start_time = clock_type::now();
 
-		ret = j->storage->get_storage_impl()->readv(iov, iov_len
+		ret = j->storage->get_storage_impl()->readv({iov, size_t(iov_len)}
 			, j->piece, adjusted_offset, file_flags, j->error);
 
 		if (!j->error.ec)
@@ -1396,7 +1396,7 @@ namespace libtorrent
 		m_stats_counters.inc_stats_counter(counters::num_writing_threads, 1);
 
 		// the actual write operation
-		int ret = j->storage->get_storage_impl()->writev(&b, 1
+		int ret = j->storage->get_storage_impl()->writev(b
 			, j->piece, j->d.io.offset, file_flags, j->error);
 
 		m_stats_counters.inc_stats_counter(counters::num_writing_threads, -1);
@@ -2205,7 +2205,7 @@ namespace libtorrent
 			time_point start_time = clock_type::now();
 
 			iov.iov_len = (std::min)(block_size, piece_size - offset);
-			ret = j->storage->get_storage_impl()->readv(&iov, 1, j->piece
+			ret = j->storage->get_storage_impl()->readv(iov, j->piece
 				, offset, file_flags, j->error);
 			if (ret < 0) break;
 
@@ -2394,7 +2394,7 @@ namespace libtorrent
 				time_point start_time = clock_type::now();
 
 				TORRENT_PIECE_ASSERT(ph->offset == i * block_size, pe);
-				ret = j->storage->get_storage_impl()->readv(&iov, 1, j->piece
+				ret = j->storage->get_storage_impl()->readv(iov, j->piece
 						, ph->offset, file_flags, j->error);
 
 				if (ret < 0)
@@ -2526,8 +2526,9 @@ namespace libtorrent
 		add_torrent_params tmp;
 		if (rd == nullptr) rd = &tmp;
 
-		std::unique_ptr<std::vector<std::string> > links(j->d.links);
-		return j->storage->check_fastresume(*rd, links.get(), j->error);
+		std::unique_ptr<std::vector<std::string>> links(j->d.links);
+		return j->storage->check_fastresume(*rd
+			, links ? *links : std::vector<std::string>(), j->error);
 	}
 
 	int disk_io_thread::do_rename_file(disk_io_job* j, jobqueue_t& /* completed_jobs */ )
@@ -2631,7 +2632,7 @@ namespace libtorrent
 
 			time_point start_time = clock_type::now();
 
-			ret = j->storage->get_storage_impl()->readv(&iov, 1, j->piece
+			ret = j->storage->get_storage_impl()->readv(iov, j->piece
 				, offset, file_flags, j->error);
 
 			if (ret < 0)
